# negotiation-protocols

./: Anchor.toml  LICENSE.md  README.md  package-lock.json  package.json
docs/: context.md
programs/alignment-negotiation/: Cargo.toml
programs/alignment-negotiation/src/: lib.rs
programs/src-alignment-negotiation/: Cargo.toml
programs/src-alignment-negotiation/src/: lib.rs
tests/: alignment-negotiation.ts  apprentice.json  mentor.json  src-alignment-negotiation.ts
