[package]
name = "alignment-negotiation"
version = "0.1.0"
description = "An alignment negotiation tool for mentors and apprentices"
edition = "2021"
author = "Tome.gg"

[lib]
crate-type = ["cdylib", "lib"]
name = "alignment_negotiation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
num-traits = "0.2"
num-derive = "0.3"
